# packet_analyzer

./: .gitignore  Pipfile  README.md  main.py  packet_analyzer.py  pyproject.toml  read_pcapng_file.py  run.ps1
read_pcapng_file/: package.json  pnpm-lock.yaml
read_pcapng_file/app/: app.vue
read_pcapng_file/app/components/: ViewPacketData.vue
