[project]
name = "packet_analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Salmaan Saeed"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "scapy (>=2.7.0,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
